# pocoshelf

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
Formula/: minishelf.rb
docs/: github-app-homebrew-tap.md  release.md
packaging/homebrew/: minishelf.rb
scripts/: print_release_checksums.sh  release.sh
src/: app.rs  config.rs  git_status.rs  input.rs  main.rs  preview.rs  tree.rs  ui.rs
