[package]
name = "pocoshelf"
version = "3.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "6.0.0"
git2 = "0.20"
notify = "8.2.0"
ratatui = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"

[dev-dependencies]
tempfile = "3.13"
